Regression: behavior of Separate/Delete Geometry nodes changed in 3.3 #99667

Closed
opened 2022-07-13 13:38:06 +02:00 by Jacques Lucke · 6 comments
Member

In the setup below, the output is an empty geometry in 3.3, while the mesh line is still there in 3.2. The old behavior is correct, since the Delete Geometry node should only delete faces here. When there are no faces, it shouldn't do anything.

This is caused by c4e11122c5. It's most likely an issue with the order of domain interpolation and selection inversion. Either that should be fixed by, or the commit should be reverted.

This was found in #99664.

image.png
delete_geometry_deletes_too_much.blend

In the setup below, the output is an empty geometry in 3.3, while the mesh line is still there in 3.2. The old behavior is correct, since the Delete Geometry node should only delete faces here. When there are no faces, it shouldn't do anything. This is caused by c4e11122c5. It's most likely an issue with the order of domain interpolation and selection inversion. Either that should be fixed by, or the commit should be reverted. This was found in #99664. ![image.png](https://archive.blender.org/developer/F13290218/image.png) [delete_geometry_deletes_too_much.blend](https://archive.blender.org/developer/F13290217/delete_geometry_deletes_too_much.blend)
Author
Member
Added subscribers: @JacquesLucke, @HooglyBoogly, @wannes.malfait
Jacques Lucke changed title from Behavior of Separate/Delete Geometry nodes changed in 3.3 to Regression: behavior of Separate/Delete Geometry nodes changed in 3.3 2022-07-13 13:39:04 +02:00
Member

Although #99664 (Delete Geometry node face mode behaves unexpectedly when used after Join Geometry) shows a bigger problem, I think this specific regression is caused by this check here:

  /* Check if there is anything to delete. */
  if (selection.is_single() && selection.get_internal_single()) {
    return;
  }

When the selection is empty, this doesn't return, while in the old version it did. So adding a check for empty selections would probably fix this:
(selection.is_empty() || (selection.is_single() && selection.get_internal_single()))

If #99664 were fixed, then this check wouldn't affect the outcome, just how long the node takes.

Although #99664 (Delete Geometry node face mode behaves unexpectedly when used after Join Geometry) shows a bigger problem, I think this specific regression is caused by this check here: ``` /* Check if there is anything to delete. */ if (selection.is_single() && selection.get_internal_single()) { return; } ``` When the selection is empty, this doesn't return, while in the old version it did. So adding a check for empty selections would probably fix this: `(selection.is_empty() || (selection.is_single() && selection.get_internal_single())) ` If #99664 were fixed, then this check wouldn't affect the outcome, just how long the node takes.
Author
Member

Sounds reasonable, want to create a patch?

Sounds reasonable, want to create a patch?
Member
Sure: [D15445: Fix #99667: Regression in Delete Geometry node](https://archive.blender.org/developer/D15445)

This issue was referenced by 7561183830

This issue was referenced by 75611838300be7c01cf7020006e81f64ec75aaf2
Author
Member

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Jacques Lucke self-assigned this 2022-07-20 15:50:23 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99667
No description provided.