Fix T99667: regression in Delete Geometry node

Differential Revision: https://developer.blender.org/D15445